Fix missing background color

--- a/src/styles/components/_panel.scss
+++ b/src/styles/components/_panel.scss
@@ -5,4 +5,5 @@
 
 .c-panel__bd {
     padding: $base-grid-size * 2;
+    background-color: $color-white;
 }
